added a rought leaf optical property section
Krista, I think your suggestion actually is better. Maybe this would be better as #3.2?

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -12053,6 +12053,22 @@
   keywords = {Beech,Carotenoids,Monoterpenoids,Photosynthesis,Sun and shade leaves,Vertical canopy gradient,Volatiles}
 }
 
+@article{simpragaVerticalCanopyGradient2013b,
+  title = {Vertical Canopy Gradient in Photosynthesis and Monoterpenoid Emissions: {{An}} Insight into the Chemistry and Physiology Behind},
+  shorttitle = {Vertical Canopy Gradient in Photosynthesis and Monoterpenoid Emissions},
+  author = {Šimpraga, M. and Verbeeck, H. and Bloemen, J. and Vanhaecke, L. and Demarcke, M. and Joó, E. and Pokorska, O. and Amelynck, C. and Schoon, N. and Dewulf, J. and Van Langenhove, H. and Heinesch, B. and Aubinet, M. and Steppe, K.},
+  date = {2013-12},
+  journaltitle = {Atmospheric Environment},
+  volume = {80},
+  pages = {85--95},
+  issn = {13522310},
+  doi = {10.1016/j.atmosenv.2013.07.047},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S1352231013005785},
+  urldate = {2022-02-13},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/JTMJ6RIA/Šimpraga et al. - 2013 - Vertical canopy gradient in photosynthesis and mon.pdf}
+}
+
 @article{sitchEvaluationEcosystemDynamics2003,
   title = {Evaluation of Ecosystem Dynamics, Plant Geography and Terrestrial Carbon Cycling in the {{LPJ}} Dynamic Global Vegetation Model},
   author = {Sitch, S. and Smith, B. and Prentice, I. C. and Arneth, A. and Bondeau, A. and Cramer, W. and Kaplan, J. O. and Levis, S. and Lucht, W. and Sykes, M. T. and Thonicke, K. and Venevsky, S.},
@@ -13445,6 +13461,25 @@
   langid = {english},
   keywords = {Absorption of light,Biochemistry,Electronic transitions and molecular vibrations,Leaf anatomy and structure,Scattering processes,Spectroscopy},
   file = {/Users/nidhivinod/Zotero/storage/VE84L9BV/Ustin and Jacquemoud - 2020 - How the Optical Properties of Leaves Modify the Ab.pdf}
+}
+
+@incollection{ustinHowOpticalProperties2020a,
+  title = {How the {{Optical Properties}} of {{Leaves Modify}} the {{Absorption}} and {{Scattering}} of {{Energy}} and {{Enhance Leaf Functionality}}},
+  booktitle = {Remote {{Sensing}} of {{Plant Biodiversity}}},
+  author = {Ustin, Susan L. and Jacquemoud, Stéphane},
+  editor = {Cavender-Bares, Jeannine and Gamon, John A. and Townsend, Philip A.},
+  date = {2020},
+  pages = {349--384},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-030-33157-3_14},
+  url = {https://doi.org/10.1007/978-3-030-33157-3_14},
+  urldate = {2022-02-12},
+  abstract = {Leaves absorb, scatter, and transmit sunlight at all wavelengths across the visible, near-infrared, and shortwave-infrared spectrum. The optical properties of a leaf are determined by its biochemical and biophysical characteristics, including its 3-D cellular organization. The absorption and scattering properties of leaves together create the shape of their reflectance spectra. Terrestrial seed plant species share similar physiological and metabolic processes for fluxes of gases (CO2, O2, H2O), nutrients, and energy, while differences are primarily consequences of how these properties are distributed and their physical structures. Related species generally share biochemical and biophysical traits, and their optical properties are also similar, providing a mechanism for identification. However, it is often the minor differences in spectral properties throughout the wavelengths of the solar spectrum that define a species or groups of related species. This chapter provides a review and summary of the most common interactions between leaf properties and light and the physical processes that regulate the outcomes of these interactions.},
+  isbn = {978-3-030-33157-3},
+  langid = {english},
+  keywords = {Absorption of light,Biochemistry,Electronic transitions and molecular vibrations,Leaf anatomy and structure,Scattering processes,Spectroscopy},
+  file = {/Users/nidhivinod/Zotero/storage/BDMKSRK9/Ustin and Jacquemoud - 2020 - How the Optical Properties of Leaves Modify the Ab.pdf}
 }
 
 @article{valladaresInteractionsWaterStress1997,
