--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -306,7 +306,6 @@ At the same time, sun leaves also have adaptations to protect against water stre
 In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
 In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
-
 ## 3.2 Metabolic capacity and efficiency
 
 Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
@@ -314,8 +313,10 @@ Sun leaves have higher concentrations (per unit area) of elements such as nitrog
 Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the forest vertical profile give shade leaves greater PAR absorptance efficiency (Table `r table_leaf_traits`).
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
-
-## 3.3 – Light absorption and reflectance
+## 3.3 – Leaf optical properties
+<!---need to cut parts of this paragraph or merge into 3.1?-->
+Leaf optical properties of leaves are influenced by a combination of anatomical, morphological, biochemical traits outlined above and water content, that vary vertically.
+Leaf light absorptance is maximized along the vertical light gradient and is balanced with leaf temperature regulation. Yet, leaf absorptance is only modestly greater in sun leaves. In the understory or shade regions where PAR is more limiting, leaf light adsorption efficiency is greater than in sun leaves, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilites, which realizes to be similar chlorophyll concentration per unit area as in sun leaves. Therefore, shade leaves can have comparable light harvesting capabilities as in sun leaves, and higher absorption effiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. On the other hand, in higher light environment, there is less need for light absorption efficiency, but greater need to channel higher availablity of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity. At the same time, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or biochemically dissipating heat through caretenoid concentrations [Table 1, @knappVariabilityLeafOptical1998; @leeCorrelatesLeafOptical1990]. Thicker sun leaves also reduce light transmittance or light scattered after entering the leaf than shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. Therefore, while canopy leaves tend to invest more energy in metabolic activity and heat dissipation, understory leaves invest in light capture.
 
 
 ## 3.#. Biochemical protection against foliage light and heat damage
