small changes, need to come back to this

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -315,8 +315,8 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 
 ## 3.3 – Leaf optical properties
 <!---need to cut parts of this paragraph or merge into 3.1?-->
-Leaf optical properties of leaves are influenced by a combination of anatomical, morphological, biochemical traits outlined above and water content, that vary vertically.
-Leaf light absorptance is maximized along the vertical light gradient and is balanced with leaf temperature regulation. Yet, leaf absorptance is only modestly greater in sun leaves. In the understory or shade regions where PAR is more limiting, leaf light absorption efficiency is greater than in sun leaves, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilites, which realizes to be similar chlorophyll concentration per unit area as in sun leaves. Therefore, shade leaves can have comparable light harvesting capabilities as in sun leaves, and higher absorption effiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. On the other hand, in higher light environment, there is less need for light absorption efficiency, but greater need to channel higher availablity of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity. At the same time, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or biochemically dissipating heat through caretenoid concentrations [Table 1, @knappVariabilityLeafOptical1998; @leeCorrelatesLeafOptical1990]. Thicker sun leaves also reduce light transmittance or light scattered after entering the leaf than shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. Therefore, while canopy leaves tend to invest more energy in metabolic activity and heat dissipation, understory leaves invest in light capture.
+Leaf optical properties of leaves are influenced by a combination of anatomical, morphological, and biochemical traits outlined above, that vary vertically.
+Leaf light absorptance is maximized along the vertical light gradient and is balanced with leaf temperature regulation, where excess light can impair photosynthetic machinery (see below). Yet, leaf absorptance is only modestly greater in sun leaves or mid-canopy leaves than shade leaves. In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat through caretenoid concentrations [Table 1, @knappVariabilityLeafOptical1998; @leeCorrelatesLeafOptical1990]. Further, there is less a need for light absorption efficiency, but greater need to channel the higher availablity of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity.  The thickness of sun leaves also reduce light transmittance or light scattered after entering the leaf than shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. However, in the understory or shade regions where PAR is more limiting, leaf light absorption efficiency is greater, enhanced by shade leaves maintaining higher SLA, denser layers of chloroplasts, shorter, fewer layers of conical palisade cells, higher nitrogen, and chlorophyll per unit biomass that exemplifies optical absorption capabilites, which realizes to be similar chlorophyll concentration per unit area as in sun leaves. Therefore, shade leaves can have comparable light harvesting capabilities as in sun leaves, and higher absorption effiency per unit biomass [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. Therefore, while canopy leaves tend to invest more energy in metabolic activity and heat dissipation, understory leaves invest in light capture.
 
 
 ## 3.#. Biochemical protection against foliage light and heat damage
