--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -359,10 +359,10 @@ However, they are more closely adapted to microclimate than macroclimate [@feele
 <!--For example, *Quercus muehlenbergii* Engelm. growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than *Quercus macrocarpa* Michx. growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. (removed because I had trouble finding this in the paper, plus it's not really needed, but feel free to reinstate) -->
 
 <!--par on thermal tolerance across vertical gradients-->
-Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be higher in sun-exposed upper canopy leaves than in understory leaves. 
-Indeed, along a vertical gradient within a very open canopy in Australia, crowns of *Acacia papyrocarpa* Benth. showed greater $T_{50}$ and higher composite climate stress in the lower, north-facing portions of their crowns than in other crown positions, correlating with low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation, as indicated by longer leaf thermal time constants [@curtis_intracanopy_2019]. 
-However, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama (Table `r table_leaf_traits`), $T_{50}$ varied modestly, being slightly lower for shade than sun leaves for two of three tree species [@slotPhotosyntheticHeatTolerance2019]. 
-This small difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments implies that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
+Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be greatest for the leaves that face the greatest radiation and highest temperatures along the vertical gradient. 
+Indeed, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama, $T_{50}$ was 0.7 - 1.4 $^\circ$C lower for shade than sun leaves for two of three tree species [Table `r table_leaf_traits`, @slotPhotosyntheticHeatTolerance2019]. 
+Similarly, along a vertical gradient within a very open canopy in Australia, where crowns of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress -- including low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation -- in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1 $^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
+These modest difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments imply that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 However, not enough studies have evaluated thermal tolerances across vertical gradients to make robust inferences.
 
 ## 3.6. Leaf phenology
