--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -199,10 +199,10 @@ In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pr
 Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 The implication is that upper canopy leaves face higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
 
-Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances, attenuation of radiation and vertical transport of sensible heat by the canopy can buffer the lower canopy and understory from large diel swings in air temperature  (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
-The $T_{air}$ gradient from the upper canopy to the understory varies with factors such as local topography, vertical air mixing, cloud cover,  vegetation type and sensible heat emissions [@defrenneForestMicroclimatesClimate2021]. 
-Typically, diel temperature range is smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [@missonPartitioningForestCarbon2007; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022]. 
-Notably, this pattern can be reversed in open forests. 
+Vertical gradients in air temperature ($T_{air}$) across forest profiles are variable (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`), being dependent upon factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021]. 
+It is most commonly the case that attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTEMPSubcanopyMicroclimate2021].
+Typically, diel temperature range is smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [@missonPartitioningForestCarbon2007; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTEMPSubcanopyMicroclimate2021]. 
+Notably, this pattern can be reversed in open forests (Supporting Information Figure `r SIfig_NEON_all`). 
 Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$.
 This is due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, @hadleyInfluenceKrummholzMat1987; @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].
 These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns within canopies.
