--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -309,8 +309,7 @@ In open canopies, where light is comparatively homogeneous, leaf traits may be m
 ## 3.2. Leaf optical properties
 <!---need to cut parts of this paragraph or merge into 3.1?-->
 Leaf optical properties of leaves are influenced by a combination of anatomical, morphological, and biochemical traits that vary vertically, as outlined above.
-Along the vertical light gradient, leaf light absorptance is maximized and is balanced with $T_{leaf}$ regulation, where excess light can impair photosynthetic machinery (see below).
-Yet, leaf absorptance is only modestly greater in sun leaves or mid-canopy leaves than shade leaves. 
+Along the vertical light gradient, leaf light absorptance is balanced with $T_{leaf}$ regulation, where excess light can impair photosynthetic machinery (see below), and is only modestly greater in sun leaves or mid-canopy leaves than shade leaves. 
 In higher light environment, PAR absorptance and thus heat load is reduced by reflecting light through leaf surface modifications as mentioned above, such as trichome and cuticle layer, or through biochemically dissipating heat through caretenoid concentrations [Table 1, @knappVariabilityLeafOptical1998; @leeCorrelatesLeafOptical1990].
 Further, there is less need for light absorption efficiency, but greater need to channel the higher availability of light into deeper cell layers through "light pipes" or palisade layers that increase path length for light penetration, contributing to higher photosynthetic capacity.
 The thickness of sun leaves also reduces light transmittance or light scattered after entering the leaf more than in shade leaves [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990].
