updated T_air citations

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4566,7 +4566,7 @@
   file = {/Users/nidhivinod/Zotero/storage/R5WD89Y5/Hadley and Smith - 1987 - Influence of Krummholz Mat Microclimate on Needle .pdf}
 }
 
-@article{haesenForestTempSubcanopyMicroclimate2021,
+@article{haesenForestTempSubcanopyMicroclimate2021a,
   title = {{{ForestTemp}} – {{Sub-canopy}} Microclimate Temperatures of {{European}} Forests},
   author = {Haesen, Stef and Lembrechts, Jonas J. and De Frenne, Pieter and Lenoir, Jonathan and Aalto, Juha and Ashcroft, Michael B. and Kopecký, Martin and Luoto, Miska and Maclean, Ilya and Nijs, Ivan and Niittynen, Pekka and van den Hoogen, Johan and Arriga, Nicola and Brůna, Josef and Buchmann, Nina and Čiliak, Marek and Collalti, Alessio and De Lombaerde, Emiel and Descombes, Patrice and Gharun, Mana and Goded, Ignacio and Govaert, Sanne and Greiser, Caroline and Grelle, Achim and Gruening, Carsten and Hederová, Lucia and Hylander, Kristoffer and Kreyling, Jürgen and Kruijt, Bart and Macek, Martin and Máliš, František and Man, Matěj and Manca, Giovanni and Matula, Radim and Meeussen, Camille and Merinero, Sonia and Minerbi, Stefano and Montagnani, Leonardo and Muffler, Lena and Ogaya, Romà and Penuelas, Josep and Plichta, Roman and Portillo-Estrada, Miguel and Schmeddes, Jonas and Shekhar, Ankit and Spicher, Fabien and Ujházyová, Mariana and Vangansbeke, Pieter and Weigel, Robert and Wild, Jan and Zellweger, Florian and Van Meerbeek, Koenraad},
   options = {useprefix=true},
@@ -4578,12 +4578,12 @@
   issn = {1365-2486},
   doi = {10.1111/gcb.15892},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15892},
-  urldate = {2021-11-04},
+  urldate = {2022-02-13},
   abstract = {Ecological research heavily relies on coarse-gridded climate data based on standardized temperature measurements recorded at 2 m height in open landscapes. However, many organisms experience environmental conditions that differ substantially from those captured by these macroclimatic (i.e. free air) temperature grids. In forests, the tree canopy functions as a thermal insulator and buffers sub-canopy microclimatic conditions, thereby affecting biological and ecological processes. To improve the assessment of climatic conditions and climate-change-related impacts on forest-floor biodiversity and functioning, high-resolution temperature grids reflecting forest microclimates are thus urgently needed. Combining more than 1200 time series of in situ near-surface forest temperature with topographical, biological and macroclimatic variables in a machine learning model, we predicted the mean monthly offset between sub-canopy temperature at 15 cm above the surface and free-air temperature over the period 2000–2020 at a spatial resolution of 25 m across Europe. This offset was used to evaluate the difference between microclimate and macroclimate across space and seasons and finally enabled us to calculate mean annual and monthly temperatures for European forest understories. We found that sub-canopy air temperatures differ substantially from free-air temperatures, being on average 2.1°C (standard deviation ± 1.6°C) lower in summer and 2.0°C higher (±0.7°C) in winter across Europe. Additionally, our high-resolution maps expose considerable microclimatic variation within landscapes, not captured by the gridded macroclimatic products. The provided forest sub-canopy temperature maps will enable future research to model below-canopy biological processes and patterns, as well as species distributions more accurately.},
   langid = {english},
   keywords = {biodiversity,boosted regression trees,climate change,ecosystem processes,forest microclimate,SoilTemp,species distributions,thermal buffering},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15892},
-  file = {/Users/nidhivinod/Zotero/storage/4J3IHECS/gcb.html}
+  file = {/Users/nidhivinod/Zotero/storage/H5RP8G53/Haesen et al. - 2021 - ForestTemp – Sub-canopy microclimate temperatures .pdf}
 }
 
 @article{hagemeierFunctionalCrownArchitecture2019,
@@ -8111,6 +8111,22 @@
   langid = {english},
   pagetotal = {192},
   keywords = {Science / Life Sciences / Botany}
+}
+
+@article{meeussenMicroclimaticEdgetointeriorGradients2021,
+  title = {Microclimatic Edge-to-Interior Gradients of {{European}} Deciduous Forests},
+  author = {Meeussen, Camille and Govaert, Sanne and Vanneste, Thomas and Bollmann, Kurt and Brunet, Jörg and Calders, Kim and Cousins, Sara A. O. and De Pauw, Karen and Diekmann, Martin and Gasperini, Cristina and Hedwall, Per-Ola and Hylander, Kristoffer and Iacopetti, Giovanni and Lenoir, Jonathan and Lindmo, Sigrid and Orczewska, Anna and Ponette, Quentin and Plue, Jan and Sanczuk, Pieter and Selvi, Federico and Spicher, Fabien and Verbeeck, Hans and Zellweger, Florian and Verheyen, Kris and Vangansbeke, Pieter and De Frenne, Pieter},
+  date = {2021-12-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {311},
+  pages = {108699},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2021.108699},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192321003853},
+  urldate = {2022-02-13},
+  abstract = {Global forest cover is heavily fragmented. Due to high edge-to-surface ratios in small forest patches, a large proportion of forests is affected by edge influences involving steep microclimatic gradients. Although forest edges are important ecotones and account for 20\% of the global forested area, it remains unclear how biotic and abiotic drivers affect forest edge microclimates at the continental scale. Here we report soil and air temperatures measured in 225 deciduous forest plots across Europe for two years. Forest stands were situated along a latitudinal gradient and subject to a varying vegetation structure as quantified by terrestrial laser scanning. In summer, the average offset of air and soil temperatures in forest edges compared to temperatures outside the forest amounted to -2.8~°C and -2.3~°C, respectively. Edge-to-interior summer temperature gradients were affected by the macroclimate and edge structure. From the edge onwards, larger offsets were observed in dense forest edges and in warmer, southern regions. In open forests and northern Europe, altered microclimatic conditions extended deeper into the forest and gradients were steeper. Canopy closure and plant area index were important drivers of summer offsets in edges, whereas in winter also the forest-floor biomass played a key role. Using high-resolution maps, we estimated that approximately 10\% of the European broadleaved forests would be affected by altered temperature regimes. Gradual transition zones between forest and adjacent lands are valuable habitat types for edge species. However, if cool and moist forest interiors are desired, then (i) dense and complex forest edges, (ii) an undisturbed forested buffer zone of at least 12.5~m deep and (iii) trees with a high shade casting ability could all contribute to an increased offset. These findings provide important guidelines to mitigate edge influences, to protect typical forest microclimates and to adapt forest management to climate change.},
+  langid = {english},
+  keywords = {Climate change,Edge influence,Forest structure,Fragmentation,Temperate forests,Temperature buffering}
 }
 
 @article{meinzerBiophysicalConstraintsLeaf2008,
